--- a/ep.css
+++ b/ep.css
@@ -8,6 +8,12 @@ div.dropdown
     position:absolute;
     right: 35px;
 }
+
+/* Mui ten lên dau trang */
+.lentop {display:none; bottom: 80%; right: 10px; cursor: pointer;  position: fixed; z-index: 1000;}
+.lentop div {background:#28a745;  border-radius:45px; padding:11px 12.5px; box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.3)}
+.lentop img {width:24px; height:24px; padding-bottom: 3px;}
+    /**/
 nav.black
 {
     background-color: #030321;
