--- a/eProjectTest.css
+++ b/eProjectTest.css
@@ -1,6 +1,13 @@
 .lentop {display:none; bottom: 80%; right: 10px; cursor: pointer;  position: fixed; z-index: 1000;}
 .lentop div { background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);  border-radius:45px; padding:11px 12.5px; box-shadow: 1px 3px 5px 0px rgba(0, 0, 0, 0.3)}
 .lentop img {width:24px; height:24px; padding-bottom: 3px;}
+body
+{
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 20000% 20000%;
+	animation: gradient 15s ease infinite;
+	height: 15vh;
+}
 nav
 {
 	color: #fff;
@@ -10,7 +17,6 @@ nav
 	align-items: center;
 	flex-direction: row;
 	margin: 0;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 15vh;
@@ -39,8 +45,8 @@ a.nav-link, a.nav-link:hover
 }
 .l
 {
-    margin-left: 30px;
-    border: 0 solid;
+  margin-left: 30px;
+  border: 0 solid;
   box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
   outline: 1px solid;
   outline-color: rgba(255, 255, 255, .5);
@@ -89,7 +95,6 @@ div.r
     position:absolute;
     right: 50px;
 }
-
 
 
 .word {
