--- a/CSS/eProjectTest.css
+++ b/CSS/eProjectTest.css
@@ -94,7 +94,7 @@ a.nav-link, a.nav-link:hover
   outline-color: rgba(255, 255, 255, 0);
   outline-offset: 15px;
   text-shadow: 1px 1px 2px #427388;
-  font-size: larger;
+  font-size: medium;
 
 }
 
