--- a/CSS/eProjectTest.css
+++ b/CSS/eProjectTest.css
@@ -94,19 +94,19 @@ a.nav-link, a.nav-link:hover
   outline-color: rgba(255, 255, 255, 0);
   outline-offset: 15px;
   text-shadow: 1px 1px 2px #427388;
-  font-size: medium;
+  font-size: large;
 
 }
 
 div.r
 {
     position:absolute;
-    right: 50px;
+    left: 100px;
 }
 div.r2
 {
 	position:absolute;
-    left: 100px;
+    right: 50px;
 }
 div.l
 {
