--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -7,12 +7,12 @@
 div.r2
 {
 	position:absolute;
-    right: 30px;
+    right: 20px;
 }
 div.l
 {
     position:absolute;
-    left: 30px;
+    left: 18px;
 }
 
 .l:hover
@@ -125,13 +125,13 @@ div.l
   .noidung_dropdown {
     /*Ẩn nội dụng các đường dẫn*/
     position: absolute;
-    min-width: 200px;
+    min-width: 90px;
     z-index: 0;
     border: 0 solid;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
 	animation: gradient 20s ease infinite;
-	height: 240px;
+	height: 430px;
   box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
   outline: 1px solid;
   outline-color: rgba(255, 255, 255, .5);
@@ -172,14 +172,14 @@ div.l
 
     .carosel
 	{
-		width: 375px;
+		width: 0px;
+    height: 140px;
 		margin-left: auto;
 		margin-right: auto;
 	}
-    .carousel-item, .active
-    {
+   /* .carousel-item, .active{
         height: 270px;
-    }
+    } */
     
     
   }
