--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -184,8 +184,191 @@ div.l
     
   }
 
+
+  /*700px.aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
+
   @media screen and (max-width: 700px) {
+    div.r
+    {
+        position:absolute;
+        left: 60px;
+    }
+    div.r2
+    {
+      position:absolute;
+        right: 20px;
+    }
+    div.l
+    {
+        position:absolute;
+        left: 18px;
+    }
     
+    .l:hover
+    {
+      border: 1px solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+      text-shadow: 1px 1px 2px #427388;
+      font-size:x-small;
+    }
+    
+    .r
+    {
+      border: 0 solid;
+      padding: 2px;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+      outline: 1px solid;
+      outline-color: rgba(255, 255, 255, .5);
+      outline-offset: 0px;
+      text-shadow: none;
+      transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+      border-radius: 15px;
+      border-radius: 15px 15px;
+      border-radius: 15px 15px 15px;
+      border-radius: 15px 15px 15px;
+      font-size: xx-small;
+    }
+    
+    .r:hover
+    {
+      border: 1px solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+      text-shadow: 1px 1px 2px #427388;
+      font-size: x-small;
+    
+    }
+    
+    .l
+    {
+      border: 0 solid;
+      padding: 2px;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+      outline: 1px solid;
+      outline-color: rgba(255, 255, 255, .5);
+      outline-offset: 0px;
+      text-shadow: none;
+      transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+      border-radius: 15px;
+      border-radius: 15px 15px;
+      border-radius: 15px 15px 15px;
+      border-radius: 15px 15px 15px;
+      font-size: xx-small;
+    }
+    
+    .nut_dropdown {
+        border: 0 solid;
+        padding: 7px;
+        background: transparent; outline: none;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+      outline: 1px solid;
+      outline-color: rgba(255, 255, 255, .5);
+      outline-offset: 0px;
+      text-shadow: none;
+      transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+      border-radius: 15px;
+      border-radius: 15px 15px;
+      border-radius: 15px 15px 15px;
+      border-radius: 15px 15px 15px;
+      font-size: xx-small;
+      }
+    
+      .nut_dropdown:hover {
+        border: 1px solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+      text-shadow: 1px 1px 2px #427388;
+      font-size: x-small;
+      }
+    
+      .noidung_dropdown a {
+        color: white;
+        text-decoration: none;
+        display: block;
+      }
+      .noidung_dropdown a:hover{
+        color: white;
+        text-decoration: none;
+        display: block;
+        box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+        outline-color: rgba(255, 255, 255, 0);
+        outline-offset: 15px;
+        font-size: x-small;
+      }
+    
+      .noidung_dropdown:hover {
+        /*Ẩn nội dụng các đường dẫn*/
+        border: 1px solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+      text-shadow: 1px 1px 2px #427388;
+      font-size: x-small;
+      text-decoration: none;
+      }
+    
+      .noidung_dropdown {
+        /*Ẩn nội dụng các đường dẫn*/
+        position: absolute;
+        min-width: 90px;
+        z-index: 0;
+        border: 0 solid;
+        background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+        background-size: 400% 400%;
+      animation: gradient 20s ease infinite;
+      height: 430px;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+      outline: 1px solid;
+      outline-color: rgba(255, 255, 255, .5);
+      outline-offset: 0px;
+      text-shadow: none;
+      transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+      border-radius: 15px;
+      border-radius: 15px 15px;
+      border-radius: 15px 15px 15px;
+      border-radius: 15px 15px 15px;
+      font-size: xx-small;
+      }
+    
+      .bubbles h1.h a{
+      position: relative;
+      margin: 70%;
+      font-family: 'Luckiest Guy', cursive;
+      color: #fff;
+      z-index: 2;
+      font-size: large;
+      }
+      .bubbles
+      {
+        position: absolute;
+        right: 56%;
+      }
+      .bubbles h1.h a:hover
+      {
+        text-decoration: none;
+      }
+      .individual-bubble {
+      position: absolute;
+      border-radius: 100%;
+      bottom: 10px;
+      background-color: #fff;
+      margin-left: 80%;
+      }
+    
+        .carosel
+      {
+        width: 0px;
+        height: 140px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+       /* .carousel-item, .active{
+            height: 270px;
+        } */
   }
   
  
