--- a/CSS/mobileFaq.css
+++ b/CSS/mobileFaq.css
@@ -1,3 +1,20 @@
 @media screen and (max-width: 400px) {
+    .faq
+{
+    padding: 5px;
+    color: white;
+    border: 1 solid;
     
+    font-size: 12px;
+}
+}
+@media screen and (max-width: 700px) {
+    .faq
+{
+    padding: 5px;
+    color: white;
+    border: 1 solid;
+    
+    font-size: 12px;
+}
 }
